syntax = "proto3";
option csharp_namespace = "Sample.Grpc";

package sample_service;

service SampleService {
  rpc Sample(SampleRequest)
      returns (stream SampleResponse);
}

message SampleRequest {
  // no fields now
}

message SampleResponse {
  string message = 1;
}